src/objects/Marketing_activity_dates__c.object
<CustomObject>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Marketing activity dates</relationshipLabel>
        <relationshipName>Marketing_activity_dates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Marketing activity dates</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing activity dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>